# elite-engineers_advent-of-ai_2025_02

./: CLAUDE.md  F_STRING_FIX.md  LLM_FREEDOM_FIX.md  NEXT_QUESTIONS_FINAL_FIX.md  NEXT_QUESTIONS_FIX.md  README.md  TZ_FIX_SUMMARY.md  TZ_INTEGRATION_README.md  TZ_MEMORY_FIX_SUMMARY.md  test_tz_fix.py  tz_demo.py  tz_models_test.py
.claude/: settings.local.json
.qoder/: settings.json
day1/: .env.example  README.md  STRUCTURED_OUTPUT_FIXES.md  examples.md  llm.json  main.py  pyproject.toml  requirements.txt  test_display_fix.py  test_json_extraction.py
day11/: .env.example  main.py  mcp.json  periodic_task.json  pyproject.toml  test_telegram.py
day11/.qoder/: settings.json
day17/: in_check_weather.md  in_create_release.md  in_write_something_nice.md  main.py  mcp.json  pyproject.toml  task_runner.py  test_agent_middleware.py  test_basic_agent.py  test_detection_function.py  test_llm.py  test_long_conversation.py  test_memory.py
day17/.serena/: project.yml
day17/sessions/: default.json
day19/: .gitignore  AI_CHALLENGE_SUMMARY.md  MIGRATION_TO_UV.md  PROJECT_STATUS.md  README.md  UV_SETUP.md  debug_template.py  example.py  main.py  pyproject.toml  test_demo.py  test_server_debug.py  test_web_endpoint.py  test_web_render.py
day19/.serena/: project.yml
day19/documents/: README.md  ai_article.txt  python_guide.txt
day19/src/: document_processor.py  embedding_generator.py  main.py  web_server.py
day19/src/templates/: search.html
day19/test_final/: vector_store.json
day19/test_langchain1/: index_stats.json
day5/: OpenRouter Chat Tue Oct 21 2025 devstral medium.json  OpenRouter Chat Tue Oct 21 2025 devstral small 2505 (free).json  OpenRouter Chat Tue Oct 21 2025 grok 4 fast.json
day6/: .env.example  README.md  main.py  pyproject.toml
day6_1/: main.py  pyproject.toml
day8/: .env.example  .gitignore  CITATIONS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OLLAMA_INTEGRATION.md  RAG_THRESHOLD_IMPLEMENTATION.md  README.md  VOICE_INPUT_GUIDE.md  citation_demo.py  demo_rag_threshold.py  demo_rag_usage.md  demo_summarization.py  main.py  mcp.json  mcp.py  microphone_input.py  pyproject.toml  rag_manager.py  sample_documents.txt  test_agent.py  test_integration.py  test_microphone.py  test_ollama.py  test_rag_citations.py  test_rag_complete.py  test_rag_threshold.py  test_summarization_detection.py  test_token_counting.py  user_profile.md  verify_citations.py  verify_threshold.py  z_mcp.py
day8/.qoder/: settings.json
day8/docker_run_20251119_235849/: Dockerfile
day8/documents/: upyachka.txt
day8/rag_index/: index_stats.json  vector_store.json
day8/sessions/: azaz.json  azaza.json  default.json
