[project]
name = "day1"
version = "0.1.0"
description = "Simple console AI chat using GLM API from z.ai"
authors = [
    {name = "Elite Engineers"}
]
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
