[project]
name = "document-indexer"
version = "0.1.0"
description = "Document indexing pipeline with LangChain 1.0.5+ (uv-only setup)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langchain-huggingface>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "chromadb>=1.3.4",
    "sentence-transformers>=5.1.2",
    "pypdf>=6.2.0",
    "python-multipart>=0.0.20",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.4",
    "click>=8.3.0",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.18",
    "unstructured[pdf]>=0.18.18",
    "markdown>=3.10",
    "jinja2>=3.1.6",
]

[project.scripts]
doc-indexer = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]
